--- a/autores.html
+++ b/autores.html
@@ -56,29 +56,40 @@
 		<section id="contenido">
 			<article>
 			<div id=derecha>
-				<iframe width="500" height="400" src="https://www.youtube.com/embed/HFPrmKFxLk0" frameborder="0" allowfullscreen></iframe>
+			<h2>Autores</h2><br>
+<pre>
+Mauricio Pazmiño
+Tecnólogo en Computación
+Estudiante de Ingeniería de sistemas
+UNAD CEAD Pasto
+
+
+
+
+Germán Obando
+Tecnólogo en Computación
+Estudiante de Ingeniería de sistemas
+UNAD CEAD Pasto
+
+</pre>
 			</div>
 			<div id="izquierda">
-				<h1>Bienvenidos al OVI Diseño de Sitios Web</h1>
-				El objetivo de este OVI es brindar lo necesario para un fácil aprendizaje del diseño y construcción de un sitio web, en el contenido podremos encontrar lo concerniente a HTML5, CSS3, tutoriales y herramientas que ayudaran a adquirir conocimientos eficeintes.
+				<br>
+				<img src="img/ronald.jpg"><br>
+				<img src="img/ger.jpg" width="119" height="157">
+			</div>
 			</article>
 			<aside>
 				<a class="twitter-timeline" data-lang="es" data-width="220" data-height="200" data-link-color="#E81C4F" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-				<br><br>
-				<script type="text/javascript" src="https://counter1.fcs.ovh/private/counter.js?c=haga6hfuhufq9qbccn7rkst3rcb4bb7g" ></script>
-				<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter1.fcs.ovh/private/contadorvisitasgratis.php?c=haga6hfuhufq9qbccn7rkst3rcb4bb7g" border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a></noscript>
 			</aside>
 		</section>
 		<footer>
-
 			<p>
 			Sitio desarrollado por Gérman Obando y Mauricio Pazmiño<br>
 			Universidad Nacional Abierta y a Distancia<br>
 			San Juan de Pasto, Colombia
 			</p>
-			
 		</footer>
 	</section>
-
 </body>
 </html>
