--- a/con_codigo.html
+++ b/con_codigo.html
@@ -56,29 +56,53 @@
 		<section id="contenido">
 			<article>
 			<div id=derecha>
-				<iframe width="500" height="400" src="https://www.youtube.com/embed/HFPrmKFxLk0" frameborder="0" allowfullscreen></iframe>
+			<h2>Consejos para codificar Lectura 5</h2><br>
+<pre>
+Buenas practicas a la hora programar
+Hace algunos años decidí internarme en el mundo de la programación, fue casualidad o
+la busqueda de un nuevo campo laboral lo que me llevo al campo de la 
+codificación y me encontré con algoritmos, sintaxis, lenguajes y muchos elementos 
+más, que en un principio desbordaron mi capacidad de retener y comprender que hacia 
+cada uno de esos ítems; entonces pensé que la mejor manera comprender y ser eficaz 
+a la hora de desarrollar un código para el desarrollo de software era tener  unas 
+buenas costumbres a la hora de programar. 
+
+Por ende quiero compartir estos 5 consejos para ser eficiente en la codificación:
+
+- Realiza una sintaxis clara y ordenada: la identación es esencial para visualizar 
+  un orden a tu código
+- Realiza comentarios: los comentarios de las secciones de código que ejecutan 
+  acciones relevantes son básicos para que no pierdas tiempo en buscar algo necesario
+  para cambios
+- No repitas código: es buena práctica releer tu código para asegurarte que no has 
+  repito código innecesario, así podrás factorizar lo que se pueda para volver más 
+  eficiente el código.
+- Realiza módulos: es recomendable separar el código en módulos de funciones 
+  concretas para no tener confusiones ni enredos a la hora de realizar algún cambio
+- Copias de seguridad: es importante realizar una o varias copias de seguridad de tu 
+  código por si en algún momento la información se extravía o daña. 
+
+Podrás encontrar en el web muchos mas consejos para la buena práctica a la hora de 
+codificar.  
+
+
+</pre>
 			</div>
 			<div id="izquierda">
-				<h1>Bienvenidos al OVI Diseño de Sitios Web</h1>
-				El objetivo de este OVI es brindar lo necesario para un fácil aprendizaje del diseño y construcción de un sitio web, en el contenido podremos encontrar lo concerniente a HTML5, CSS3, tutoriales y herramientas que ayudaran a adquirir conocimientos eficeintes.
+
+			</div>
 			</article>
 			<aside>
 				<a class="twitter-timeline" data-lang="es" data-width="220" data-height="200" data-link-color="#E81C4F" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-				<br><br>
-				<script type="text/javascript" src="https://counter1.fcs.ovh/private/counter.js?c=haga6hfuhufq9qbccn7rkst3rcb4bb7g" ></script>
-				<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter1.fcs.ovh/private/contadorvisitasgratis.php?c=haga6hfuhufq9qbccn7rkst3rcb4bb7g" border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a></noscript>
 			</aside>
 		</section>
 		<footer>
-
 			<p>
 			Sitio desarrollado por Gérman Obando y Mauricio Pazmiño<br>
 			Universidad Nacional Abierta y a Distancia<br>
 			San Juan de Pasto, Colombia
 			</p>
-			
 		</footer>
 	</section>
-
 </body>
 </html>
