--- a/actividad1.html
+++ b/actividad1.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta content="German Obando" name="author">
-	<meta content="Ovi para la materia diseñeos de sitios web dictado por la UNAD" name="description">
+	<meta content="Ovi para la materia disñeos de sitios web dictado por la UNAD" name="description">
 	<meta content="diseño sitios web, UNAD, html, css, ccs3" name="keywords">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/estilo.css">
@@ -55,28 +55,23 @@
 		</nav>
 		<section id="contenido">
 			<article>
-			<div id=derecha>
-				<iframe width="500" height="400" src="https://www.youtube.com/embed/HFPrmKFxLk0" frameborder="0" allowfullscreen></iframe>
+			<div id=izquierdo>
+			<iframe src='https://www.educaplay.com/es/recursoseducativos/2936056/html5/aprendamos_mas_sobre_html.htm' width='755' height='690' frameborder='0'></iframe><a href='https://www.educaplay.com/es/recursoseducativos/2936056/aprendamos_mas_sobre_html.htm'>Aprendamos más sobre html.</a>
+
 			</div>
-			<div id="izquierda">
-				<h1>Bienvenidos al OVI Diseño de Sitios Web</h1>
-				El objetivo de este OVI es brindar lo necesario para un fácil aprendizaje del diseño y construcción de un sitio web, en el contenido podremos encontrar lo concerniente a HTML5, CSS3, tutoriales y herramientas que ayudaran a adquirir conocimientos eficeintes.
+			<div id="derecho">
+				
 			</article>
 			<aside>
 				<a class="twitter-timeline" data-lang="es" data-width="220" data-height="200" data-link-color="#E81C4F" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-				<br><br>
-				<script type="text/javascript" src="https://counter1.fcs.ovh/private/counter.js?c=haga6hfuhufq9qbccn7rkst3rcb4bb7g" ></script>
-				<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter1.fcs.ovh/private/contadorvisitasgratis.php?c=haga6hfuhufq9qbccn7rkst3rcb4bb7g" border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a></noscript>
 			</aside>
 		</section>
 		<footer>
-
 			<p>
 			Sitio desarrollado por Gérman Obando y Mauricio Pazmiño<br>
 			Universidad Nacional Abierta y a Distancia<br>
 			San Juan de Pasto, Colombia
 			</p>
-			
 		</footer>
 	</section>
 
