--- a/estructura.html
+++ b/estructura.html
@@ -56,29 +56,49 @@
 		<section id="contenido">
 			<article>
 			<div id=derecha>
-				<iframe width="500" height="400" src="https://www.youtube.com/embed/HFPrmKFxLk0" frameborder="0" allowfullscreen></iframe>
+			<h2>Estructura de CSS Lectura 4</h2><br>
+<pre>
+Sintaxis básica:
+Cualquier etiqueta de HTML puede recibir atributos a través de CSS, basta con indicar 
+el nombre de la etiqueta seguida de llaves y dentro de ellas los atributos que se 
+deseen insertar.
+Ejemplo:   p { background-color: #ffffff }
+
+Declaración de una clase:
+Primero se antepone un punto y después el nombre de la clase seguida de llaves y 
+dentro de ellas los atributos que se deseen insertar
+Ejemplo:  .menu { font-family: Helvetica }
+
+Declaración de un ID:
+Primero se antepone el símbolo de numeral (#) y después el nombre del ID seguido 
+de llaves y dentro de ellas los atributos que se deseen insertar
+Ejemplo:  #pc { color: #000000;}
+
+Agrupamiento:
+Se puede agrupar varias etiquetas de HTML para ahorrar líneas de código así:
+H1, H2, H3, { font-family: sans-serif}
+
+Comentarios:
+Puede insertar un comentario en el código de la siguiente manera: 
+/* Este es un comentario*/
+
+</pre>
 			</div>
 			<div id="izquierda">
-				<h1>Bienvenidos al OVI Diseño de Sitios Web</h1>
-				El objetivo de este OVI es brindar lo necesario para un fácil aprendizaje del diseño y construcción de un sitio web, en el contenido podremos encontrar lo concerniente a HTML5, CSS3, tutoriales y herramientas que ayudaran a adquirir conocimientos eficeintes.
+
+			</div>
 			</article>
 			<aside>
 				<a class="twitter-timeline" data-lang="es" data-width="220" data-height="200" data-link-color="#E81C4F" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-				<br><br>
-				<script type="text/javascript" src="https://counter1.fcs.ovh/private/counter.js?c=haga6hfuhufq9qbccn7rkst3rcb4bb7g" ></script>
-				<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter1.fcs.ovh/private/contadorvisitasgratis.php?c=haga6hfuhufq9qbccn7rkst3rcb4bb7g" border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a></noscript>
 			</aside>
 		</section>
 		<footer>
-
 			<p>
 			Sitio desarrollado por Gérman Obando y Mauricio Pazmiño<br>
 			Universidad Nacional Abierta y a Distancia<br>
 			San Juan de Pasto, Colombia
 			</p>
-			
 		</footer>
 	</section>
-
 </body>
 </html>
