--- a/his_css.html
+++ b/his_css.html
@@ -56,29 +56,41 @@
 		<section id="contenido">
 			<article>
 			<div id=derecha>
-				<iframe width="500" height="400" src="https://www.youtube.com/embed/HFPrmKFxLk0" frameborder="0" allowfullscreen></iframe>
+			<h2>Concepto y breve historia de CSS Lectura 3</h2><br>
+<pre>
+En primer lugar tenemos que identificar sus siglas,  C cascading S style S sheets lo 
+que traduce Hojas de estilo en cascada.  Esta herramienta es utilizada por los 
+navegadores y programadores web para el diseño de las páginas o sitios de internet. 
+En un principio el aspecto visual dependía de los atributos que se le aplicasen a las 
+etiquetas de HTML, pero con el pasar del tiempo y la evolución del lenguaje se vio la
+necesidad de separar el contenido semántico del aspecto visual. Es entonces donde 
+comienza la historia de CSS:
+- 1994 y 1995: Hakon Wium Lie y Bert Bos unen esfuerzo para definir el lenguaje CSS
+- 1996: W3C publicó la primera recomendación oficial llamada CSS nivel 1
+- 1997: W3C crea un equipó exclusivo para el desarrollo de CSS
+- 1998: Se publica la segunda recomendación oficial conocida como CSS nivel 2
+- Actualidad, aunque los progresos en los diferentes lenguajes son robustos, cabe 
+  aclarar que la recomendación oficial de W3C para el 	CSS3 aún no llega debido a 
+  que los navegadores no poseen todavía el soporte completo para el nivel 2.1, se 
+  espera que el lenguaje se siga desarrollando a la par de los navegadores. 
+
+</pre>
 			</div>
 			<div id="izquierda">
-				<h1>Bienvenidos al OVI Diseño de Sitios Web</h1>
-				El objetivo de este OVI es brindar lo necesario para un fácil aprendizaje del diseño y construcción de un sitio web, en el contenido podremos encontrar lo concerniente a HTML5, CSS3, tutoriales y herramientas que ayudaran a adquirir conocimientos eficeintes.
+				
+			</div>
 			</article>
 			<aside>
 				<a class="twitter-timeline" data-lang="es" data-width="220" data-height="200" data-link-color="#E81C4F" href="https://twitter.com/UniversidadUNAD">Tweets by UniversidadUNAD</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-				<br><br>
-				<script type="text/javascript" src="https://counter1.fcs.ovh/private/counter.js?c=haga6hfuhufq9qbccn7rkst3rcb4bb7g" ></script>
-				<noscript><a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img src="https://counter1.fcs.ovh/private/contadorvisitasgratis.php?c=haga6hfuhufq9qbccn7rkst3rcb4bb7g" border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a></noscript>
 			</aside>
 		</section>
 		<footer>
-
 			<p>
 			Sitio desarrollado por Gérman Obando y Mauricio Pazmiño<br>
 			Universidad Nacional Abierta y a Distancia<br>
 			San Juan de Pasto, Colombia
 			</p>
-			
 		</footer>
 	</section>
-
 </body>
 </html>
